# ai-agents

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose-deploy.yaml  compose.yaml  langgraph.json  pyproject.toml
.claude/: launch.json  settings.json
src/coding_agent/: __init__.py  agent.py  config.py  mcp_config.py  prompts.py
src/conventions/: conventions.py  conventions_agentic.py  conventions_indexer.py
src/conventions/sources/: API types.md  Kafka.md  REST API.md
src/coooking/: cooking.py
src/flights/: flight_assistant.py  flight_service.py
src/flights/a2a/: __init__.py  __main__.py  agent.py  agent_card.py  agent_executor.py  server.py
src/flights/mcp/: __init__.py  __main__.py  server.py
src/native-llm/: native_llm_api.py
src/simple-chat/: simple_chat.py
src/transactions/: spending_assistant.py  spending_db_tools.yaml
src/transactions/data/: create_db.sql  transactions_data.sql
src/workflows/: evaluator_optimizer.py  parallelization.py  prompt_chaining.py  routing.py  supervisor.py
src/workflows/docs/: job_description_backend.txt
tests/: test_flight_assistant.py  test_flight_assistant_regression.py
