[project]
name = "ai-agents"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "langchain==1.3.10",
    "langchain-mcp-adapters==0.3.0",
    "langchain-openai==1.3.2",
    "langchain-text-splitters==1.1.2",
    "pypdf==6.13.3",
    "unstructured==0.23.1",
    "markdown==3.10.2",
    "langchain-community==0.4.2",
    "langchain-chroma==1.1.0",
    "langgraph==1.2.6",
    "langgraph-api==0.10.0",
    "langgraph-cli[inmem]==0.4.30",
    "psycopg2-binary==2.9.12",
    "pytest==9.1.1",
    "agentevals==0.0.9",
    "a2a-sdk==1.1.0",
    "fastmcp==3.4.2",
    "deepagents==0.6.11",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
